# real-time-resume-aid

./: .env  .gitignore  README.md  build.bat  index.html  package-lock.json  package.json  tailwind.config.ts  test-data.sql
PrivacyOverlay/: AudioMonitor.h  AudioProtection.h  Authentication.cpp  Authentication.h  BUILD_INSTRUCTIONS.txt  BasicOverlay.ps1  CompileWithPowerShell.bat  ControlPanel.cpp  ControlPanel.h  CreateExeFile.bat  EnhancedPrivacyOverlay.cpp  EnhancedPrivacyOverlay.vcxproj  GlobalVariables.h  GuaranteedOverlay.cpp  LaunchPresenterAssistant.bat  Logger.cpp  Logger.h  LoopbackCapture.cpp  LoopbackCapture.h  OverlayWindow.cpp  OverlayWindow.h  PresenterAssistant.ps1  PrivacyOverlay.cfg  PrivacyOverlay.cpp  PrivacyOverlay.ps1  PrivacyOverlay.rc  PrivacyOverlay.vcxproj  README.md  Resource.rc  ScreenCapture.h  ScreenProtection.h  Settings.h  SimpleOverlay.cpp  SimplePrivacyOverlay.ps1  (+15 more)
cpp-client/: CMakeLists.txt  README.md  test-credentials.md
cpp-client/include/: audio_capture.h  auth_client.h
cpp-client/src/: audio_capture.cpp  auth_client.cpp  main.cpp
real-time-resume-aid-stealth-incremental-d1d464/native-helper/: Cargo.toml
real-time-resume-aid-stealth-incremental-d1d464/native-helper/packaging/windows/: stealth_helper.iss
real-time-resume-aid-stealth-incremental-d1d464/native-helper/src/: main.rs  overlay_server.rs  web.rs
real-time-resume-aid-stealth-incremental-d1d464/native-helper/src/capture/: linux.rs  mac.rs  mod.rs  win.rs
real-time-resume-aid-stealth-incremental-d1d464/native-helper/src/overlay/: mac.rs  mod.rs  win.rs
(+200 files in other folders)
