
[package]
name = "native-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tungstenite = "0.21"
cfg-if = "1"
opus = "0.3"

[features]
default = []
windows = ["windows"]
macos = ["coreaudio-sys"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation","Win32_Media_Audio","Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
